# meeting_summary

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1
docker/: Dockerfile.cpu  Dockerfile.gpu  compose.offline.yml  entrypoint.sh  export_offline.ps1  import_and_run_offline.ps1  seed_models.py
docs/: Feature SRS - Speaker Diarization and Alignment.md  Fix1.md  INSTALLATION_AR.md  OFFLINE_DOCKER_HANDOFF.md  PROJECT_DESCRIPTION.md  SRS.md  TROUBLESHOOTING_NLTK_PUNKT_TAB.md
packaging/offline/: README.md  RUNBOOK.txt
packaging/offline/compose/: compose.cpu.yml  compose.gpu.yml  compose.yml
packaging/offline/host-client/: build_host_client.ps1  meeting_assistant.spec  requirements-host.txt
scripts/: audit_repo_before_github.py  audit_sqlite_privacy.py
src/meeting_assistant/: __init__.py  app_context.py  config.py  debug_util.py  logging_setup.py  nvidia_windows_dlls.py  trace.py
src/meeting_assistant/qml/: Main.qml
tests/: conftest.py  test_chat_controller_guards.py  test_chat_controller_speaker_map_session_switch.py  test_compute_type_candidates.py  test_diarization_format.py  test_diarization_settings.py  test_ffmpeg_audio_preprocess.py  test_history_and_summarize.py  test_offline_accept_script.py  test_output_paths.py  test_processing_stop.py  test_prompt_composition.py  test_speaker_mapping.py  test_sqlite_hf_and_speakers.py  test_trace_logging.py  test_transcript_jargon_normalizer.py  test_ui_language_setting.py  test_whisper_http_adapter.py  test_whisperx_asr_segment_filter.py
(+73 files in other folders)
